--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-svgo": "^2.2.1",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
+    "minify": "^5.1.1",
     "node-sass": "^4.14.1",
     "normalize": "^0.3.1"
   }
